Updated for semester 7 and 8 (readjusted font to fit two pages)

--- a/Agam_Agarwal_Resume.tex
+++ b/Agam_Agarwal_Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt]{extarticle}
+\documentclass[8pt]{extarticle}
 
 \usepackage[margin=0.7in]{geometry}
 \usepackage{multicol}
@@ -43,7 +43,8 @@ Indian Institute of Technology, Hyderabad}
 \begin{flushleft}
 \textbf{Email: \href{mailto:cs12b1003@iith.ac.in}{cs12b1003@iith.ac.in} \\
 Personal Email: \href{mailto:agammaster@gmail.com}{agammaster@gmail.com} \\
-Profile- \url{in.linkedin.com/in/agamagarwal} \\
+Github - \url{https://github.com/AgamAgarwal} \\
+Profile- \url{https://in.linkedin.com/in/agamagarwal} \\
 Contact - +91-950-500-8963}
 \end{flushleft}
 \end{minipage}
@@ -54,7 +55,7 @@ Contact - +91-950-500-8963}
 \rowcolors{2}{white}{gray!25}
 \begin{tabular}{lllll}
 \textbf{Examination} & \textbf{University/Board} & \textbf{Institute} & \textbf{Year} & \textbf{CGPA/\%} \\
-Graduation (on going) & IIT Hyderabad & IIT Hyderabad & 2016 & 9.75 (till 6th semester) \\
+Graduation (on going) & IIT Hyderabad & IIT Hyderabad & 2016 & 9.76 (till 7th semester) \\
 Intermediate & ISC & City Montessori School, Chowk & 2012 & 94.33 \\
 High School & ICSE & City Montessori School, Chowk & 2010 & 94.14
 \end{tabular}
@@ -95,9 +96,9 @@ High School & ICSE & City Montessori School, Chowk & 2010 & 94.14
 \item The project involved inferring Locality information for entities based on the available information.
 \end{itemize}
 \space
-\textbf{IIT Hyderabad} (\url{www.iith.ac.in}) - Teaching Assistant for \textit{Principles of Programming Languages} course \\ and \textit{Compilers} course \hfill (Jan'15 - Apr'15) \& (Aug'15 - Nov'15)
+\textbf{IIT Hyderabad} (\url{www.iith.ac.in}) - Teaching Assistant for courses \textit{Principles of Programming Languages}, \textit{Compilers} and \textit{Computer Architecture} \hfill (Jan'15 - Apr'15), (Aug'15 - Nov'15) \& (Jan'16 - Apr'16)
 \begin{itemize}
-\item Worked with Dr Ramakrishna Upadrasta as a teaching assistant.
+\item Worked with Dr Ramakrishna Upadrasta and Dr Manish Singh as a teaching assistant.
 \item Helped in designing the course structure, assignments and in evaluations of projects.
 \end{itemize}
 \space
@@ -113,19 +114,42 @@ High School & ICSE & City Montessori School, Chowk & 2010 & 94.14
 
 \heading{Projects}
 
-\textbf{Visualizing Network Topology} \textit{Guide: Dr Kotaro Kataoka, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - March'15)
+\textbf{JukeBots - A music composing bot} \textit{Guide: Dr Vineeth N. Balasubramanian, CSE Dept., IIT Hyderabad} \hfill (Apr'16)
+\begin{itemize}
+\item Worked in a team of 2 to create a music composing bot using a recurrent neural network.
+\item Results can be found here: \url{https://soundcloud.com/juke-bots/}
+\end{itemize}
+\space
+\textbf{HopOn - car pooling system} \textit{Guides: Dr. MVP Rao, Dr Manish Singh, CSE Dept., IIT Hyderabad} \hfill (Mar'16 - Apr'16)
+\begin{itemize}
+\item Worked in a team of 3 to create a car-pooling management system for IITH using node.js and React.
+\item Features include creating rides, searching for rides, commenting on rides, etc.
+\end{itemize}
+\space
+\textbf{Finding Influential People in a Social Network} \textit{Guide: Dr Manish Singh, CSE Dept., IIT Hyderabad} \hfill (Sep'15 - Nov'15)
+\begin{itemize}
+\item Worked in a team of 3 to create a page-rank based algorithm to find top-k influential people in a given online social network group.
+\end{itemize}
+\space
+\textbf{Intelligames} \textit{Guide: Dr Vineeth N. Balasubramanian, CSE Dept., IIT Hyderabad} \hfill (Sep'15 - Nov'15)
+\begin{itemize}
+\item Worked in a team of 3 to create a reinforcement learning based bot which could learn to play computer games.
+\item The bot can easily learn and play games like flappy bird and obstacle avoider.
+\end{itemize}
+\space
+\textbf{Visualizing Network Topology} \textit{Guide: Dr Kotaro Kataoka, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - Mar'15)
 \begin{itemize}
 \item Worked in a team of 3 to write a software, which uses SNMP and LLDP to crawl the network and displays the calculated network as a
 graph.
 \end{itemize}
 \space
-\textbf{Summarized Network Histories} \textit{Guide: Dr Kotaro Kataoka, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - April'15)
+\textbf{Summarized Network Histories} \textit{Guide: Dr Kotaro Kataoka, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - Apr'15)
 \begin{itemize}
 \item Worked in a team of 4 to research on the problem of summarized network histories.
 \item Implemented a basic version of HotSwap (Laurent Vanbever et. al.) using Ryu OpenFlow controller.
 \end{itemize}
 \space
-\textbf{Facial Expression Recognition} \textit{Guide: Dr C. Krishna Mohan, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - April'15)
+\textbf{Facial Expression Recognition} \textit{Guide: Dr C. Krishna Mohan, CSE Dept., IIT Hyderabad} \hfill (Jan'15 - Apr'15)
 \begin{itemize}
 \item Worked in a team of 4 to implement ``A vision-based hybrid method for facial expression recognition" (X. Huang, Y. Lin).
 \end{itemize}
@@ -197,6 +221,11 @@ graph.
 \heading{Key Courses Undertaken}
 \begin{multicols}{2}
 \begin{itemize}
+\item Deep Learning
+\item Software Engineering
+\item Predictive Analysis and Knowledge Discovery
+\item Pervasive Computing
+\item Concurrency Control in Transactional Systems
 \item Computer Vision
 \item Topics in Database Management Systems
 \item Parallel and Concurrent Programming
