Fixed incorrect article. Stupid me

--- a/Agam_Agarwal_Resume.tex
+++ b/Agam_Agarwal_Resume.tex
@@ -66,7 +66,7 @@ High School & ICSE & City Montessori School, Chowk & 2010 & 94.14\%
 \heading{Achievements}
 
 \begin{itemize}
-\item \textbf{President's Gold Medallist} from IIT Hyderabad with an Cumulative Grade Point Average of \textbf{9.78/10}.
+\item \textbf{President's Gold Medallist} 2016 from IIT Hyderabad with a Cumulative Grade Point Average of \textbf{9.78/10}.
 
 \item Won \textbf{Microsoft's Capture the Flag} (a national-level information security and hacking competition) for two years: \textbf{first} place in \textbf{HackCon'14} and \textbf{second} place in \textbf{Build the Shield'15}.
 
